# Morskoy_Boy

./: .gitignore  CMakeLists.txt  Error.h  README.md  Ship.drawio  includes.h  main.cpp
Action/: Action.cpp  Action.h  ActionGenerator.cpp  ActionGenerator.h
Bullet/: Bullet.cpp  Bullet.h
Coords/: Coords.h
Field/: Field.cpp  Field.h
GameMaster/: GameMaster.cpp  GameMaster.h
Interface/: Interface.cpp  Interface.h
Player/: Player.cpp  Player.h
Renderer/: Animation.cpp  Animation.h  AnimationFactory.cpp  AnimationFactory.h  AnimationType.h  ConsoleWindow.cpp  ConsoleWindow.h  ImageStorage.cpp  ImageStorage.h  Renderer.cpp  Renderer.h
Ships/: BoundaryBox.cpp  BoundaryBox.h  Hull.cpp  Hull.h  Ship.cpp  Ship.h  ShipType.h  Shipyard.cpp  Shipyard.h
Weapons/: Projectile.cpp  Projectile.h  Weapon.cpp  Weapon.h  WeaponTypes.h
